# Arbiter

./: .gitignore  .project  CMakeLists.txt  LICENSE  README.md  SingleHeader.hpp
CMake/: Arbiter.cmake  Libraries.cmake  Paths.cmake  Platform.cmake  Runtime.cmake
Editor/: CMakeLists.txt  main.cpp
Examples/: CMakeLists.txt
Examples/Cubes/: CMakeLists.txt  cubes.hpp  main.cpp
Examples/LightingModels/: CMakeLists.txt  lighting.hpp  main.cpp
Examples/SmokeSimulator/: CMakeLists.txt  main.cpp  smoke_simulator.hpp
Python/: amalgamate.py
Reference/: notes.md
Source/: CMakeLists.txt
Source/AIModule/: AIModule.hpp  CMakeLists.txt
Source/Arbiter/: CMakeLists.txt
Source/Arbiter/AIModule/: AIModule.hpp  CMakeLists.txt
Source/Arbiter/Animation/: CMakeLists.txt
Source/Arbiter/Audio/: CMakeLists.txt
Source/Arbiter/Core/: Application.hpp  ApplicationContextSDL.cpp  ApplicationContextSDL.hpp  Arbiter.hpp  ArbiterPlatform.hpp  CMakeLists.txt  Containers.hpp  Diagnostics.hpp  Framework.hpp  Math.hpp  Parser.hpp  RenderTarget.hpp  Scene.hpp  SceneManager.hpp
Source/Arbiter/Core/Common/: Base.hpp  Platform.hpp  Singleton.hpp  StandardHeaders.hpp  StdHeaders.hpp  Type.hpp
Source/Arbiter/Core/Exception/: Exception.hpp
Source/Arbiter/Core/Framework/: Application.cpp  Application.hpp  ApplicationContextSDL.cpp  ApplicationContextSDL.hpp  RenderEngine.hpp  RenderTarget.hpp  Scene.cpp  Scene.hpp  SceneBuffer.cpp  SceneBuffer.hpp  SceneManager.hpp
Source/Arbiter/Core/Graph/: ComputationalGraph.cpp  ComputationalGraph.hpp  Graph.hpp
Source/Arbiter/Core/Logger/: Logger.hpp
Source/Arbiter/Core/Math/: AutomaticDifferentiation.hpp  Complex.hpp  DenseMatrix.hpp  ForwardModeAD.hpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  ReverseModeAD.hpp  Utility.cpp  Utility.hpp  Vector.hpp
Source/Arbiter/Core/Math/Autodiff/: AutomaticDifferentiation.hpp  ForwardModeAD.hpp  ReverseModeAD.hpp
Source/Arbiter/Core/Math/Geometry/: Geometry.hpp  Triangulation.hpp
Source/Arbiter/Core/Math/LinearAlgebra/: Angle.hpp  Complex.hpp  DenseMatrix.hpp  Matrix.hpp  Quaternion.hpp  SparseMatrix.hpp  Vector.hpp
Source/Arbiter/Core/Memory/: AlignedMemory.hpp  AlignedMemoryAllocator.hpp  MemoryAllocatorConf.hpp  StdMemoryAllocator.hpp
Source/Arbiter/Core/Threading/: Threading.hpp
Source/Arbiter/Framework/: Application.cpp  Application.hpp  CMakeLists.txt  Framework.hpp  Opengl.hpp  SDLSetup.cpp  SDLSetup.hpp  Scene.cpp  Scene.hpp  SceneBuffer.cpp  SceneBuffer.hpp  Vulkan.hpp
Source/Arbiter/Framework/Opengl/: Setup.cpp  Setup.hpp
Source/Arbiter/Geometry/: CMakeLists.txt
Source/Arbiter/Graphics/: CMakeLists.txt  DeferredRenderer.cpp  DeferredRenderer.hpp  ForwardRenderer.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PersepectiveCamera.hpp  RaytracerRenderer.hpp  RealisticCamera.cpp  RealtimeRaytracerRenderer.cpp  RealtimeRaytracerRenderer.hpp  Renderer.cpp  Renderer.hpp  RendererBuffer.hpp
Source/Arbiter/Graphics/API/: Base.cpp  Base.hpp  CMakeLists.txt
Source/Arbiter/Graphics/API/D3D12/: D3D12GraphicsApi.cpp  D3D12GraphicsApi.hpp  GraphicsApi.cpp  GraphicsApi.hpp
Source/Arbiter/Graphics/API/Metal/: GraphicsApi.hpp  MetalGraphicsApi.cpp  MetalGraphicsApi.hpp
Source/Arbiter/Graphics/API/Opengl/: DepthBufferObject.cpp  DepthBufferObject.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GLContext.hpp  GLDepthBufferObject.cpp  GLDepthBufferObject.hpp  GLFrameBufferObject.cpp  GLFrameBufferObject.hpp  GLIndexBufferObject.cpp  GLIndexBufferObject.hpp  GLVAOManager.hpp  GLVertexArrayObject.cpp  GLVertexArrayObject.hpp  GLVertexBufferObject.cpp  GraphicsApi.cpp  GraphicsApi.hpp  IndexBuffer.cpp  IndexBuffer.hpp  IndexBufferObject.cpp  IndexBufferObject.hpp  VertexArray.cpp  VertexArray.hpp  VertexArrayObject.hpp  VertexBuffer.hpp  VertexBufferObject.hpp
Source/Arbiter/Graphics/Engine/: CMakeLists.txt  Camera.hpp  DeferredRenderer.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  Graphics.hpp  Light.cpp  Light.hpp  OrthographicCamera.hpp  PersepectiveCamera.cpp  PersepectiveCamera.hpp  RaytracerRenderer.cpp  RaytracerRenderer.hpp  RealisticCamera.cpp  RealisticCamera.hpp  RealtimeRaytracerRenderer.cpp  RealtimeRaytracerRenderer.hpp  Renderer.hpp  RendererBuffer.cpp  RendererBuffer.hpp
Source/Arbiter/Graphics/Engine/AugmentedReality/: AugmentedReality.hpp
Source/Arbiter/Graphics/Engine/Camera/: Camera.cpp  Camera.hpp  OrthographicCamera.cpp  PersepectiveCamera.hpp
Source/Arbiter/Graphics/Engine/Renderer/: DeferredRenderer.cpp  DeferredRenderer.hpp  ForwardRenderer.cpp  RaytracerRenderer.cpp  RaytracerRenderer.hpp  Renderer.cpp  Renderer.hpp  RendererBuffer.hpp
Source/Arbiter/Graphics/Engine/VirtualReality/: VirtualReality.hpp
Source/Arbiter/HTML5/: CMakeLists.txt  HTML5.hpp
Source/Arbiter/Interface/: CMakeLists.txt  Interface.hpp
Source/Arbiter/Math/: CMakeLists.txt
Source/Arbiter/Math/Autodiff/: ForwardModeAD.hpp
Source/Arbiter/Math/Kernels/: Kernel.hpp
Source/Arbiter/Math/LinearAlgebra/: Angle.hpp  Complex.hpp  Matrix.hpp
Source/Arbiter/Network/: CMakeLists.txt  Network.hpp
Source/Arbiter/Nyx/: CMakeLists.txt  Nyx.hpp  README.md
Source/Arbiter/Physics/: CMakeLists.txt  Physics.hpp
Source/Arbiter/Platform/: CMakeLists.txt  Platform.hpp
Source/Arbiter/RayTracing/: CMakeLists.txt  RayTracing.hpp
Source/Core/: Memory.hpp
Source/Core/Math/: Complex.cpp  Complex.hpp  Matrix.cpp  Vector.cpp  Vector.hpp
Source/Framework/: Application.cpp  Application.hpp  CMakeLists.txt  Framework.hpp  Scene.cpp  Scene.hpp
Source/Geometry/: CMakeLists.txt  Geometry.hpp
Source/Graphics/: CMakeLists.txt  Dx.hpp  GL.hpp  Vulkan.hpp  WebGL.hpp
Source/Interface/: CMakeLists.txt  Interface.hpp
